# glheadless

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  glheadless-config.cmake
cmake/: CompileOptions.cmake  FindEGL.cmake  PlatformMacOS.cmake  PlatformWindowsMSVC.cmake
deploy/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt  glheadless-version.h.in
source/examples/: CMakeLists.txt
source/examples/basic-context/: CMakeLists.txt  main.cpp
source/examples/basic-context-creation/: CMakeLists.txt
source/examples/error-handling/: CMakeLists.txt  main.cpp
source/examples/glfw-interop/: CMakeLists.txt  main.cpp
source/examples/multithreading/: CMakeLists.txt  main.cpp
source/examples/shared-context/: CMakeLists.txt  main.cpp
source/glheadless/: CMakeLists.txt
source/glheadless/include/glheadless/: Context.h  ContextFactory.h  ContextFormat.h  ExceptionTrigger.h  ExceptionTrigger.hpp  PixelFormat.h  error.h  glheadless_api.h
source/glheadless/source/: AbstractImplementation.cpp  AbstractImplementation.h  Context.cpp  ContextFactory.cpp  InternalException.cpp  InternalException.h  PixelFormat.cpp  error.cpp
source/glheadless/source/cgl/: Implementation.cpp  Implementation.h  error.cpp  error.h
source/glheadless/source/egl/: Implementation.cpp  Implementation.h  Platform.cpp  Platform.h
source/glheadless/source/glx/: Implementation.cpp  Implementation.h  Platform.cpp  Platform.h  error.cpp  error.h
source/glheadless/source/wgl/: Implementation.cpp  Implementation.h  Platform.cpp  Platform.h  Window.cpp  Window.h
source/tests/: CMakeLists.txt
source/tests/glfw-test/: CMakeLists.txt  glfw_test.cpp  main.cpp
source/tests/glheadless-test/: CMakeLists.txt  basic-context_test.cpp  multithread_test.cpp  shared-context_test.cpp
